--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@nuxtjs/tailwindcss": "6.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.12.5",
     "lucide-vue-next": "^0.468.0",
     "nuxt": "^3.14.1592",
     "radix-vue": "^1.9.11",
